--- a/src/Pages/StudentLogin/StudentLogin.module.css
+++ b/src/Pages/StudentLogin/StudentLogin.module.css
@@ -108,9 +108,9 @@ p {
   border-radius: 50%;
   background: #2563eb;
   border: none;
-  position: absolute;
-  left: 0px;
-  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   transition: transform 0.3s ease-in-out, background 0.3s;
 }
