--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -1,3 +1,4 @@
+/* src/Testimonials.css */
 /* Google Font */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 
@@ -56,7 +57,6 @@
   height: 100px;
   object-fit: cover;
   margin-bottom: 1rem;
-  margin-left: 75px;
 }
 
 .testimonialText {
