--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -57,6 +57,8 @@
   height: 100px;
   object-fit: cover;
   margin-bottom: 1rem;
+  text-align: center;
+  justify-self: center;
 }
 
 .testimonialText {
