Subscription plan changes

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -75,11 +75,13 @@
 .mobile-logo {
   text-align: center;
   margin-bottom: 2rem;
+  align-self: center;
 }
 
 .mobile-logo img {
   width: 120px; /* Adjust size to be smaller */
   height: auto;
+  text-align: center;
 }
 
 .mobile-links {
